--- a/WebContent/restrito/dashboard.xhtml
+++ b/WebContent/restrito/dashboard.xhtml
@@ -15,6 +15,18 @@
 	font-size: large;
 }
 
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active {
+    border: 1px solid #79b7e7;
+    background: lightsteelblue;
+    font-weight: bold;
+    color: #2e6e9e !important;
+}
+
+
+.ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited {
+ color: #2e6e9e !important;
+    text-decoration: none;
+}
 .dashboard .overview-box .overview-box-title {
 	font-size: large;
 	width: 100%;
